--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,4 +9,37 @@ h2 {
 .color-game-body {
   background-image: url("../imgs/christmas-wallpaper.jpg");
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 90vh;
+  margin: 30px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+}
+
+.color {
+  border: 5px solid lightgrey;
+  padding: 160px;
+  border-radius: 50%;
+  font-size: 100px;
+  width: 150px;
+  height: 150px;
+  margin: 5px;
+  color: lightgrey;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link {
+  display: none;
+  color: rgb(141, 0, 0);
+  font-size: 100px;
 }
